Multiple changes including Java9